@@ -3,7 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
-    id 'org.jlleitschuh.gradle.ktlint'
+}
+
+configurations{
+    ktlint
 }
 
 android {
@@ -84,8 +87,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
 
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
+    implementation "androidx.media3:media3-common:1.3.1"
+    implementation 'androidx.media3:media3-session:1.3.1'
+
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-compiler:2.44'
+
+    ktlint("com.pinterest:ktlint:0.47.1")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -100,4 +110,26 @@ kapt {
     correctErrorTypes true
 }
 
+tasks.register('ktlintFormat', JavaExec) {
+    mainClass = "com.pinterest.ktlint.Main"
+    classpath = configurations.ktlint
+    args("$rootDir/**/*.kt", "!$rootDir/**/build/**")
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+
+    if (project.hasProperty("autoCorrect") && project.property("autoCorrect") == "0") {
+        logger.quiet("(KTLINT): auto correction is disabled")
+    } else {
+        logger.quiet("(KTLINT): auto correction is enabled")
+        args "-F"
+    }
+}
+
+tasks.register('ktlintCheck', JavaExec) {
+    classpath = configurations.ktlint
+    mainClass = "com.pinterest.ktlint.Main"
+    args "src/**/*.kt", "**.kts", "!**/build/**"
+}
+
 tasks.preBuild.dependsOn ktlintCheck
+
+tasks.ktlintCheck.dependsOn ktlintFormat
